--- a/quality_inspection/templates/pallet_information.html
+++ b/quality_inspection/templates/pallet_information.html
@@ -1,7 +1,12 @@
-<p>This section requires e.g. {{total_attach}} attachments, Attached: {{total_attach - pending}} Pending {{pending}} <br>
-Pass Ration: {{pass_ration}} % <br>
-Fail Ration: {{100 - pass_ration}} %</p>
-
-{% if color %}
-Color: {{color}}
-{% endif %}
+<div style="text-align: center; font-size: 15px;">
+    <div style="border: 2px solid black; margin: 0 25%; padding: 2% 0% 2% 0%; border-radius: 2%;">
+        This section requires e.g. {{total_attach}} attachments, Attached: {{total_attach - pending}} Pending {{pending}} <br>
+        Pass Ration: {{pass_ration}} % <br>
+        Fail Ration: {{100 - pass_ration}} % <br>
+        
+        {% if color %}
+        Color: {{color}}
+        {% endif %}
+    </div>
+   
+</div>
