feat: fields changes, common funcation to hide select fields, set/chnage button css etc..

--- a/quality_inspection/templates/pallet_information.html
+++ b/quality_inspection/templates/pallet_information.html
@@ -1,6 +1,6 @@
 <div style="text-align: center; font-size: 15px;">
-    <div style="border: 2px solid black; margin: 0 25%; padding: 2% 0% 2% 0%; border-radius: 2%;">
-        This section requires e.g. {{total_attach}} attachments, Attached: {{total_attach - pending}} Pending {{pending}} <br>
+    <div style="border: 2px solid black; margin: 2% 10%; padding: 2% 0% 2% 0%; border-radius: 2%;">
+        This section requires {{total_attach}} attachments, Attached: {{total_attach - pending}} Pending {{pending}} <br>
         Pass Ration: {{pass_ration}} % <br>
         Fail Ration: {{100 - pass_ration}} % <br>
         
