--- a/quality_inspection/templates/document_report_pdf.html
+++ b/quality_inspection/templates/document_report_pdf.html
@@ -6,42 +6,73 @@
 <body>
     {% if doc|length > 0 %}
 
-    <div style="font-size: 20px !important;">
+    <div style="font-size: 20px !important;" class="text-center">
+        <h1><b>Quality Inspection</b></h1>
+        {% set tab_details = doc_tab_wise_field_list()%}
+        
+        <!----------------------- page 1 --------------------------->
+
         <table class="table table-bordered" style="table-layout: fixed;">
             <tr>
-                <td colspan="6" class="text-center" style="vertical-align: middle;">
+                <td class="text-center" colspan="2">
                     <h1><b>{{doc.name}}</b></h1>
                 </td>
             </tr>
             <tr>
-                <td colspan="2" class="text-center">
-                    <h2><b>Inspection Date: </b>{{doc.date_of_inspection}}</h2>
+                <td>
+                    <h2><b>Date of Inspection: </b>{{doc.date_of_inspection}}</h2>
                 </td>
-                <td colspan="2" class="text-center">
+                <td>
                     <h2><b>Vendor: </b>{{doc.vendor}}</h2>
-                </td>
-                <td colspan="2" class="text-center">
-                    <h2><b>Flooring Class: </b>{{doc.flooring_class}}</h2>
                 </td>
             </tr>
             <tr>
-                <td colspan="6" class="text-center">
-                    <h2>
+                <td>
+                    <h2><b>No Of PO: </b> {{doc.no_of_po}} </h2>
+                </td>
+                <td>
+                    <h2><b>Flooring Class: </b>{{doc.flooring_class}}</h2>
+                    <p>This determines participation of quality parameters</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2 class="col-xs-6" style="padding-left: 0%;">
                         <b> PO Reference:</b>
-                        {% for item in doc.pallet_details %}
-                        {{ item.tas_po }}{% if loop.index != doc.pallet_details|length %},{%endif%}
-                        {% endfor %}
                     </h2>
+                    <table class="col-xs-6 table-bordered">
+                        {% for item in doc.pallet_details %}
+                            <tr>
+                                <td style="padding: 2% !important;" class="text-center">{{ item.tas_po }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </td>
+                <td>
+                    {% if doc.humidity_and_temperature %}
+                    <h2><b>Relative humidity and temperature at time of inspection :</b> {{doc.humidity_and_temperature}}</h2>
+                    {% endif %}
                 </td>
             </tr>
         </table>
 
-        <div style="page-break-before:always">&nbsp;</div>
+        <!----------------------- Other Pages --------------------------->
+
+        {% for tab in tab_details%}
+
+        {% if tab.tab_name != "Pallet Information" %}
+            <div style="page-break-before:always">&nbsp;</div>
+        {% endif %}
+
+        {% set todo_ration_fieldname = tab.result_field_prefix + "todo_ratio" %}
+        {% set pass_ration_fieldname = tab.result_field_prefix + "pass_ration" %}
+        {% set undetermined_ratio_fieldname = tab.result_field_prefix + "undetermined_ratio" %}
+        {% set equipement_fieldname = tab.result_field_prefix + "equipment" %}
 
         <table class="table table-bordered" style="table-layout: fixed;">
             <tr>
                 <td class="text-left" style="vertical-align: middle; font-size: 20px">
-                    <b>GLOSS LEVEL</b>
+                    <b>{{ tab.tab_name}}</b>
                 </td>
                 <td>
                     <div class="row" style="font-size: 20px">
@@ -49,11 +80,11 @@
                             <b>Result: </b>
                         </div>
                         <div class="col-xs-5">
-                            {% set fail_ration = 100 - (doc.gloss_todo_ratio + doc.gloss_pass_ration +
-                            doc.gloss_undetermined_ratio) %}
-                            <span><b>ToDo :</b> {{doc.gloss_todo_ratio}} % </span> <br>
-                            <span><b>Pass :</b> {{doc.gloss_pass_ration}} % </span><br>
-                            <span><b>Undetermined :</b> {{doc.gloss_undetermined_ratio}} % </span><br>
+                            {% set fail_ration = 100 - (doc[todo_ration_fieldname] + doc[pass_ration_fieldname] +
+                            doc[undetermined_ratio_fieldname]) %}
+                            <span><b>ToDo :</b> {{doc[todo_ration_fieldname]}} % </span> <br>
+                            <span><b>Pass :</b> {{doc[pass_ration_fieldname]}} % </span><br>
+                            <span><b>Undetermined :</b> {{doc[undetermined_ratio_fieldname]}} % </span><br>
                             <span><b>Fail :</b> {{ " %.2f " | format(fail_ration) }} % </span> <br>
                         </div>
                     </div>
@@ -62,130 +93,133 @@
 
             <tr>
                 <td>
-                    <h2><a href="#attachments">Attachments</a></h2>
+                    <h2><a href="#{{tab.tas_po_field}}">Attachments</a></h2>
+                    <!-- <h2><a href="#attachments">Attachments</a></h2> -->
                     <!-- <h2><a href="" name="attachments">Attachments</a></h2> -->
                 </td>
                 <td>
                     <h2>
                         Equipement In Use:
-                        {% for equip in doc.gloss_equipment %}
-                        {{equip.equipment}}{% if loop.index != doc.gloss_equipment|length %},{%endif%}
-                        {% endfor %}
+                        {% if tab.tab_name == "Moisture Content" %}
+                            {{ doc[equipement_fieldname] }}
+                        {% else%}
+                            {% for equip in doc[equipement_fieldname] %}
+                            {{equip.equipment}}{% if loop.index != doc[equipement_fieldname]|length %},{%endif%}
+                            {% endfor %}
+                        {% endif %}
                     </h2>
                 </td>
             </tr>
 
-            {% for i in range(doc.no_of_po) %}
-            {% set tas_po = "po_gloss_" + (i+1)|string %}
-            {% set table_name = "gloss_level_details_" + (i+1)|string %}
-            <tr style="background-color: #D1D8BE;">
-                <td colspan="2">
-                    {{doc[tas_po]}}
-                </td>
-            </tr>
-            {% for item in doc[table_name]%}
-                <!-- <tr>
-                        <td colspan="2">
-                            {{ item.item_color }}
-                        </td>
-                    </tr> -->
+            {% if tab.tab_name != "Pallet Information" %}
+                {% for i in range(doc.no_of_po) %}
+            
+                {% set tas_po = tab.tas_po_field + (i+1)|string %}
+                {% set table_name = tab.table_fieldname + (i+1)|string %}
 
-                    <tr>
-                        <td colspan="2">
-                            <!-- <h2>Sample Details</h2> -->
-                             <p>{{ item.item_color }}</p>
+                <tr style="background-color: #D1D8BE;">
+                    <td colspan="2">
+                        {{doc[tas_po]}}
+                    </td>
+                </tr>
+
+                {% for item in doc[table_name]%}
+                <tr>
+                    <td colspan="2">
+                        <p>{{ item.item_color }}</p>
+                        <table class="table table-bordered">
+                            <thead>
+                                {% for l in tab.table_field_list%}
+                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}}>{{l.label}}</th>
+                                {% endfor %}
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    {% for f in tab.table_field_list%}
+                                        {% for field in f.fieldname %}
+                                            <td class="text-center">{{item[field] or ''}}</td>
+                                        {% endfor %}
+                                    {% endfor %}
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                {% endfor %}
+                {% endfor %}
+            
+            {% else %}
+                <tr>
+                    <td colspan="2">
+                        {% for item in doc[tab.table_fieldname]%}
                             <table class="table table-bordered">
                                 <thead>
-                                    <th class="text-center" width=12%>Master Sample</th>
-                                    <th colspan="2" class="text-center" width=17.6%>Matched</th>
-                                    <th colspan="2" class="text-center" width=17.6%>Highest Matched</th>
-                                    <th colspan="2" class="text-center" width=17.6%>Lowest Matched</th>
-                                    <th colspan="2" class="text-center" width=17.6%>Average Plank 1</th>
-                                    <th colspan="2" class="text-center" width=17.6%>Average Plank 2</th>
+                                    {% for l in tab.table_field_list%}
+                                        <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}}>{{l.label}}</th>
+                                    {% endfor %}
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>{{item.master_gl}}</td>
-                                        <td width=5%>{{item.fb_gl_1}}</td>
-                                        <td>{{item.results_select_1}}</td>
-                                        <td width=5%>{{item.fb_gl_2}}</td>
-                                        <td>{{item.results_select_2}}</td>
-                                        <td width=5%>{{item.fb_gl_3}}</td>
-                                        <td>{{item.results_select_3}}</td>
-                                        <td width=5%>{{item.fb_gl_4}}</td>
-                                        <td>{{item.results_select_4}}</td>
-                                        <td width=5%>{{item.fb_gl_5}}</td>
-                                        <td>{{item.results_select_5}}</td>
+                                        {% for f in tab.table_field_list%}
+                                            {% for field in f.fieldname %}
+                                                <td class="text-center">{{item[field] or ''}}</td>
+                                            {% endfor %}
+                                        {% endfor %}
                                     </tr>
                                 </tbody>
                             </table>
-                        </td>
-                    </tr>
-            {% endfor %}
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% endif %}
 
-        {% endfor %}
         </table>
 
+        
+        
+        {% endfor %}
+
+        <!------------- Attachements  ------------->
+
         <div style="page-break-before:always">&nbsp;</div>
-        <div id="attachments">
-            <h2><b>Photos: </b></h2>
-            <div class="row">
-            {% for i in range(doc.no_of_po) %}
-            {% set tas_po = "po_gloss_" + (i+1)|string %}
-            {% set table_name = "gloss_level_details_" + (i+1)|string %}
-            
-            {% for item in doc[table_name]%}
-                
-                {% if item.master_sample %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.master_sample or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
 
-                {% if item.finished_board_1 %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.finished_board_1 or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
+        <div class="text-left">
+        <h2>Attachements:</h2>
 
-                {% if item.finished_board_2 %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.finished_board_2 or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
-
-                {% if item.finished_board_3 %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.finished_board_3 or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
-
-                {% if item.finished_board_4 %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.finished_board_4 or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
-
-                {% if item.finished_board_5 %}
-                <div class="col-xs-4 text-center" style="padding: 5px;">
-                    <img src="{{ frappe.get_url() }}/{{item.finished_board_5 or ''}}" alt="gloss-level" width="300px" height="auto" class="img-responsive"><br>
-                    <p>Gloss Level</p>
-                </div>
-                {% endif %}
-                    
-            {% endfor %}   
+        {% for tab in tab_details %}
+        <div id="{{tab.tas_po_field}}" class="col-xs-12">
+        <h3>{{tab.tab_name}}</h3><br>
+            {% if tab.tab_name != "Pallet Information" %}
+                {% for i in range(doc.no_of_po) %}
+                    {% set table_name = tab.table_fieldname + (i+1)|string %}
+                    {% for item in doc[table_name]%}
+                        {% for field in tab.attachment_fields %}
+                            {% if item[field] %}
+                                <div class="col-xs-4 text-center" style="padding: 5px;">
+                                    <img src="{{ frappe.get_url() }}/{{item[field] or ''}}" alt="{{field}}" width="300px" height="auto" class="img-responsive">
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endfor %}
+                {% endfor %}
+            {% else %}
+                {% for item in doc[table_name]%}
+                    {% for field in tab.attachment_fields %}
+                        {% if item[field] %}
+                            <div class="col-xs-4 text-center" style="padding: 5px;">
+                                <img src="{{ frappe.get_url() }}/{{item[field] or ''}}" alt="{{field}}" width="300px" height="auto" class="img-responsive">
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endfor %}
+            {% endif %} 
+        </div> 
         {% endfor %}
         </div>
-        </div>
-
-        {% endif %}
+            
     </div>
-
+    {% endif %}
 
 
 </body>
