--- a/quality_inspection/templates/document_report_pdf.html
+++ b/quality_inspection/templates/document_report_pdf.html
@@ -50,16 +50,14 @@
                 <td>
                     <h2><b>Flooring Class: </b>{{doc.flooring_class}}</h2>
                     <p>This determines participation of quality parameters</p>
-
+                    {% if doc.flooring_class == "HARDWOOD FLOORING" %}
+                        <h3><b>Relative humidity :</b> </h3> {{doc.relative_humidity or ''}}
+                        <h3><b>Temperature :</b> </h3> {{doc.temperature or ''}}
+                        <h3><b>Time Of Inspection :</b> </h3> {{doc.time_of_inspection or ''}}
+                     {% endif %}
                 </td>
+                
             </tr>
-            {% if doc.humidity_and_temperature %}
-            <tr>
-                <td colspan="2">
-                    <h3><b>Relative humidity and temperature at time of inspection :</b> {{doc.humidity_and_temperature}}</h3>
-                </td>
-            </tr>
-            {% endif %}
         </table>
 
         <!----------------------- Other Pages --------------------------->
