feat: add 2 new roles & set permissions & workflow, add new fields, page no in print report etc.

--- a/quality_inspection/templates/document_report_pdf.html
+++ b/quality_inspection/templates/document_report_pdf.html
@@ -36,6 +36,14 @@
             </tr>
             <tr>
                 <td>
+                    <h2><b>QI User: </b> {{doc.user or ''}} </h2>
+                </td>
+                <td>
+                    <h2><b>QI Document No: </b> {{doc.qi_document_no or ''}}</h2>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <h2 class="col-xs-6" style="padding-left: 0%;">
                         <b> PO Reference:</b>
                     </h2>
