--- a/quality_inspection/templates/document_report_pdf.html
+++ b/quality_inspection/templates/document_report_pdf.html
@@ -157,24 +157,24 @@
                                             {% if tab.tab_name == "Bevel, Over Wax & Edge Paint" %}
                                                 {% if (doc.flooring_class == "HARDWOOD FLOORING" and l.fieldname[0] == "edge_paint_select") or (doc.flooring_class == "RC/SPC/WPC/LVGD" and l.fieldname[0] == "over_wax_select") %}
                                                 {% else %}
-                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}}>{{l.label}}</th>
+                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="vertical-align: middle;">{{l.label}}</th>
                                                 {% endif %}
 
                                             {% elif tab.tab_name == "Open Box Inspection" %}
                                                 {% if doc.flooring_class == "HARDWOOD FLOORING" and l.label == "Pad Away From the Locking System"%}
                                                 {% else %}
-                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}}>{{l.label}}</th>
+                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="vertical-align: middle;">{{l.label}}</th>
                                                 {% endif %}
 
                                             {% elif tab.tab_name == "Width & Thickness" %}
                                                 {% if doc.flooring_class == "HARDWOOD FLOORING" and l.label in ["Thickness without padding", "Thickness with Padding"]%}
                                                 {% elif doc.flooring_class != "HARDWOOD FLOORING" and l.label == "Thickness"  %}
                                                 {% else %}
-                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}}>{{l.label}}</th>
+                                                    <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="vertical-align: middle;">{{l.label}}</th>
                                                 {% endif %}
 
                                             {% else%}
-                                                <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="font-size: 20px">{{l.label}}</th>
+                                                <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="font-size: 20px; vertical-align: middle;">{{l.label}}</th>
                                             {% endif %}
                                         {% endfor %}
                                     </thead>
@@ -222,7 +222,7 @@
                                     <table class="table table-bordered">
                                         <thead>
                                             {% for l in tab.table_field_list%}
-                                                <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="font-size: 20px">{{l.label}}</th>
+                                                <th colspan="{{ l.fieldname|length or 1 }}" class="text-center" width={{l.width}} style="font-size: 20px; vertical-align: middle;">{{l.label}}</th>
                                             {% endfor %}
                                         </thead>
                                         <tbody>
