--- a/quality_inspection/templates/document_report_pdf.html
+++ b/quality_inspection/templates/document_report_pdf.html
@@ -35,13 +35,13 @@
             </tr>
             <tr>
                 <td>
-                    <h2><b>Quality Inspector: </b> {{doc.user or ''}} </h2>
+                    <h2><b>Quality Inspector: </b> {{doc.qi_user_full_name or ''}} </h2>
                 </td>
                 <td class="row">
-                    <h2 class="col-xs-4" style="padding-left: 0px;"><b>Document No - </b></h2>
+                    <h2 class="col-xs-4" style="padding-left: 0px;"><b>Document No : </b></h2>
                     <h2 class="col-xs-8 text-left" style="padding-left: 0px;">
-                        <b>Parsimony:</b> {{doc.name}} <br>
-                        <b>T&A QI Doc No.:</b> {{doc.qi_document_no or ''}}
+                        <b>Parsimony - </b> {{doc.name}} <br>
+                        <b>T&A QI Doc No. - </b> {{doc.qi_document_no or ''}}
                     </h2>
                 </td>
             </tr>
@@ -66,9 +66,9 @@
                     <h2><b>Flooring Class: </b>{{doc.flooring_class}}</h2>
                 </td>
                 <td>
-                    <h2><b>Relative humidity :</b> </h2> {{doc.relative_humidity or ''}}
-                    <h2><b>Temperature :</b> </h2> {{doc.temperature or ''}}
-                    <h2><b>Time Of Inspection :</b> </h2> {{doc.time_of_inspection or ''}}
+                    <h2><b>Relative humidity :</b> {{doc.relative_humidity or ''}} </h2> 
+                    <h2><b>Temperature :</b> {{doc.temperature or ''}} </h2> 
+                    <h2><b>Time Of Inspection :</b> {{doc.time_of_inspection or ''}} </h2> 
                 </td>
                 
             </tr>
@@ -97,41 +97,73 @@
                             {% set total_attach = tab.result_field_prefix + "total_attachment" %}
                             {% set pending_attach = tab.result_field_prefix + "pending_attachment" %}
 
-                            <b style="font-size: 22px">{{ tab.tab_name}}</b> <br>
-                            <h2>
-                                <b><a href="#{{tab.tas_po_field}}">Total Attachments : </a></b> {{doc[total_attach]}} <br>
-                                <b>Attached : </b> {{doc[total_attach] - doc[pending_attach]}} <br>
-                                <b>Pending Attachments : </b> {{doc[pending_attach]}}
-                            </h2>
-                            
-                            <h2>
-                                <b>Equipement In Use:</b>
-                                {% if tab.tab_name == "Moisture Content" %}
+                            <b style="font-size: 22px">{{ tab.tab_name}}</b> <br> <br>
+                            <table style="font-size: 20px;">
+                                <tr>
+                                    <td class="text-right" width="50%"><b><a href="#{{tab.tas_po_field}}">Total Attachments  </a></td>
+                                    <td class="text-left" width="50%"> : {{doc[total_attach]}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><b>Attached  </b></td>
+                                    <td class="text-left"> : {{doc[total_attach] - doc[pending_attach]}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><b>Pending  </b></td>
+                                    <td class="text-left"> : {{doc[pending_attach]}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><br><b>Equipement In Use  </b></td>
+                                    <td class="text-left"><br> : 
+                                        {% if tab.tab_name == "Moisture Content" %}
                                     {{ doc[equipement_fieldname] }}
                                 {% else%}
                                     {% for equip in doc[equipement_fieldname] %}
                                         {{equip.equipment}}{% if loop.index != doc[equipement_fieldname]|length %},{%endif%}
                                     {% endfor %}
                                 {% endif %}
-                            </h2>
+                                    </td>
+                                </tr>
+                            </table>
                         </td>
 
                         <td style="padding-top: 10px !important;">
+                            <table style="font-size: 20px; line-height: 1.3;">
                             {% set fail_ration = 100 - (doc[todo_ration_fieldname] + doc[pass_ration_fieldname] +
                                 doc[undetermined_ratio_fieldname] + doc[not_applicable_ratio_fieldname]) %}
                             {% if fail_ration < 0 %}
                                 {% set fail_ration = 0 %}
                             {% endif %}
+                            
+                            <tr>
+                                <td class="text-right" width="50%"> <b>ToDo </b></td>
+                                <td class="text-left" width="50%"> : {{doc[todo_ration_fieldname]}} % </td>
+                            </tr>
+                            <tr>
+                                <td class="text-right"><b>Pass </b></td>
+                                <td class="text-left"> : {{doc[pass_ration_fieldname]}} % </td>
+                            </tr>
+                            <tr>
+                                <td class="text-right"><b>Undetermined </b></td>
+                                <td class="text-left"> : {{doc[undetermined_ratio_fieldname]}} % </td>
+                            </tr>
+                            <tr>
+                                <td class="text-right"><b>Not Applicable </b></td>
+                                <td class="text-left"> : {{doc[not_applicable_ratio_fieldname]}} %</td>
+                            </tr>
+                            <tr>
+                                <td class="text-right"><b>Fail </b></td>
+                                <td class="text-left"> : {{ " %.2f " | format(fail_ration) }} %</td>
+                            </tr>
+                            
+                            {% if tab.tab_name == "Color Match & Embossing" %}
+                            <tr>
+                                <td class="text-right"><b>Color </b></td>
+                                <td class="text-left"> : {{ doc.color_count }}</td>
+                            </tr>
+                            {% endif %}
 
-                                <b>ToDo :</b> {{doc[todo_ration_fieldname]}} % <br>
-                                <b>Pass :</b> {{doc[pass_ration_fieldname]}} % <br>
-                                <b>Undetermined :</b> {{doc[undetermined_ratio_fieldname]}} % <br>
-                                <b>Not Applicable :</b> {{doc[not_applicable_ratio_fieldname]}} % <br>
-                                <b>Fail :</b> {{ " %.2f " | format(fail_ration) }} %  <br>
-
-                                {% if tab.tab_name == "Color Match & Embossing" %}
-                                    <span><b>Color :</b> {{ doc.color_count }}  </span> <br>
-                                {% endif %}
+                            </table>
+                                
                         </td>
                     </tr>
 
@@ -142,8 +174,9 @@
                         {% set table_name = tab.table_fieldname + (i+1)|string %}
 
                         <tr style="background-color: #D1D8BE; font-size: 20px;">
-                            <td colspan="2">
+                            <td colspan="2"><b>
                                PO - {{doc[tas_po]}}
+                               </b>
                             </td>
                         </tr>
 
@@ -263,23 +296,22 @@
             {% if tab.tab_name == "Moisture Content" and doc.flooring_class != "HARDWOOD FLOORING" %}
             {% else %}
                 <div id="{{tab.tas_po_field}}" class="col-xs-12">
-                <p style="font-size: 18px; text-align:center; background-color:#F5D2D2; padding: 5px 0px"><b>Tab : {{tab.tab_name}}</b></p>
+                <p style="font-size: 22px; text-align:center; background-color:#F5D2D2; padding: 5px 0px"><b>Tab : {{tab.tab_name}}</b></p>
                     {% if tab.tab_name != "Pallet Information" %}                 
                         {% for i in range(doc.no_of_po) %}
                             {% set tas_po = tab.tas_po_field + (i+1)|string %}
                             
-                            <p style="font-size: 16px; text-align:center; padding-top: 20px" class="col-xs-12"><b> TAS PO : {{doc[tas_po]}}</b></p><br>
+                            <p style="font-size: 20px; text-align:center; padding-top: 20px" class="col-xs-12"><b> TAS PO : {{doc[tas_po]}}</b></p><br>
 
                             {% set table_name = tab.table_fieldname + (i+1)|string %}
                             {% for item in doc[table_name]%}
-                                <div style="page-break-inside: avoid;">
-                                    <p style="font-size: 14px; text-align:center;" class="col-xs-12">Item-Color : {{ item.item_color }}</p><br>
+                                <div style="page-break-inside: avoid !important;">
+                                    <p style="font-size: 18px; text-align:center; padding: 10px 0px !important" class="col-xs-12"><b>Item-Color : {{ item.item_color }}</b></p><br>
                                     {% for field in tab.attachment_fields %}
                                         {% if item[field.url] %}
-                                            <div class="col-xs-4 text-center" style="padding: 5px;">
-                                                <span style="font-size: 0.8em;">{{field.label}}</span><br> 
-                                                <img src="{{ frappe.get_url() }}/{{item[field.url] or ''}}" alt="{{field.url}}" width="300px" class="img-responsive" style="height: 300px !important;">
-                                                
+                                            <div class="col-xs-4 text-center" style="padding: 5px; page-break-inside: avoid !important;">
+                                                <span style="font-size: 18px;"><b>{{field.label}}</b></span><br> 
+                                                <img src="{{ frappe.get_url() }}/{{item[field.url] or ''}}" alt="{{field.url}}" width="300px" class="img-responsive" style="height: 300px !important; padding-top: 10px !important;">
                                             </div>
                                         {% endif %}
                                     {% endfor %}
@@ -288,13 +320,13 @@
                         {% endfor %}
                     {% else %}
                         {% for item in doc[tab.table_fieldname]%}
-                            <div style="page-break-inside: avoid;">
-                                <p style="font-size: 16px; text-align:center; padding-top: 20px !important;" class="col-xs-12"><b> TAS PO : {{item.tas_po}}</b></p>
+                            <div style="page-break-inside: avoid !important;">
+                                <p style="font-size: 20px; text-align:center; padding-top: 20px !important;" class="col-xs-12"><b> TAS PO : {{item.tas_po}}</b></p>
                                 {% for field in tab.attachment_fields %}
                                     {% if item[field.url] %}
-                                        <div class="col-xs-4 text-center" style="padding: 5px;">
-                                            <span style="font-size: 0.8em;">{{field.label}}</span> <br>
-                                            <img src="{{ frappe.get_url() }}/{{item[field.url] or ''}}" alt="{{field.url}}" width="300px" class="img-responsive" style="height: 300px !important;">
+                                        <div class="col-xs-4 text-center" style="padding: 5px; page-break-inside: avoid !important;">
+                                            <span style="font-size: 18px;"><b>{{field.label}}</b></span> <br>
+                                            <img src="{{ frappe.get_url() }}/{{item[field.url] or ''}}" alt="{{field.url}}" width="300px" class="img-responsive" style="height: 300px !important; padding-top: 10px !important;">
                                         </div>
                                     {% endif %}
                                 {% endfor %}
