--- a/quality_inspection/templates/pallet_information.html
+++ b/quality_inspection/templates/pallet_information.html
@@ -16,7 +16,7 @@
                     {% set fail_ration = 0 %}
                 {% endif %}
                 <span>Fail : {{ " %.2f " | format(fail_ration) }} % </span> <br>
-                <span>Not Applicable : {{not_applicable_ratio}}</span>
+                <span>Not Applicable : {{not_applicable_ratio}} % </span>
             </div>
         </div>
         {% if color %}
